finally aligned but need padding correct

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,66 +3,59 @@ h2, h5 {
   vertical-align: middle;
   color: white;
 }
+
 .parallax-container {
    height: 640px;
- }
+}
 
- .drop {
+.drop {
    width: 120px;
- }
+}
 
- .nav-logo {
+.nav-logo {
    width: 60px;
    height: 60px;
    padding: 10px;
- }
+}
 
- .dropdown-content li>a {
+.dropdown-content li>a {
    color: #000 !important;
- }
+}
 
- .dropdown-content {
+.dropdown-content {
    background-color: #f97082;
- }
+}
 
- .work_btn {
+.work_btn {
    margin-left: 43%;
    padding-top: 17px;
    padding-bottom: 45px;
    padding-left: 50px;
    padding-right: 50px;
- }
+}
 
- .who {
+.who {
    color: #f97082;
- }
+}
 
- .i_am {
+.i_am {
    color: black;
- }
+}
 
 .me {
   padding-left: 100px;
 }
 
- .para {
-   padding-top: 90px;
- }
-
- .link {
-   padding-top: 300px;
- }
-
- .para_and_link {
+.para_and_link {
    padding-right: 100px;
    float: right;
    position: absolute;
- }
+}
 
- #do {
+#do {
    width: 100%;
    height: 350px;
- }
+}
 
 #ham {
   height: 60px;
